# Tscan_license

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  pyproject.toml  run_app.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-windows.yml  ci.yml
data/: license_rules.json
docs/: ANTIVIRUS_FALSE_POSITIVES.md  RELEASE_NOTES_v0.2.0-beta.md  RELEASE_NOTES_v0.2.1-beta.md  RELEASE_NOTES_v0.2.2-beta.md  TECHNICAL_DESIGN.md
installer/: TscanLicense.iss
scripts/: build.ps1  clean.ps1  run.ps1  test.ps1
src/tspace_scan/: __init__.py  app.py  app_classifier.py  database.py  filesystem_scanner.py  license_classifier.py  logging_config.py  models.py  paths.py  registry_scanner.py  reports.py  risk_analyzer.py  scanner.py  signature_verifier.py  ui.py
tests/: test_scoring.py
