[project]
name = "tscan-license"
version = "0.2.2-beta"
description = "Windows installed-software inventory and license-risk scanner."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "T-Space Scan contributors" }
]
keywords = [
  "windows",
  "software-inventory",
  "software-license-scanner",
  "software-license-audit",
  "software-asset-management",
  "license-compliance",
  "license-risk-scanner",
  "sam",
  "desktop"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Systems Administration"
]

[project.urls]
Homepage = "https://github.com/hntngoctu1/Tscan_license"
Documentation = "https://github.com/hntngoctu1/Tscan_license/blob/main/docs/TECHNICAL_DESIGN.md"

[tool.tspace_scan]
app_name = "T-Space License Risk Scanner"
release_channel = "beta"
